# mouse-env

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  pyrightconfig.json  zensical.toml
.cursor/rules/: changelog.mdc
.github/workflows/: docs.yml  publish.yml
docs/: environments.md  examples.md  guide.md  index.md  mouse_core_alignment.md  rollout_contract.md  wrappers.md
docs/api/: action_star.md  base.md  custom_envs.md  envs.md  factory.md  ns_gym.md
examples/: 01_random_rollout.ipynb  01_random_rollout.py  02_q_star_expert.ipynb  02_q_star_expert.py  03_ns_gym_oscillating.ipynb  03_ns_gym_oscillating.py  04_atari_preprocessing.ipynb  04_atari_preprocessing.py  05_partial_observability.ipynb  05_partial_observability.py  06_reward_shaping.ipynb  06_reward_shaping.py  07_synthetic_env.ipynb  08_multi_env.ipynb  09_procedural_frozenlake.ipynb  10_rng_seeding_control.ipynb  11_play_procedural_frozenlake.ipynb  12_metrics_tracker.ipynb  README.md
scripts/: install.sh  test_docs.sh
src/: __init__.py  action_star.py  base.py  build.py  config.py  contract.py  env_ids.py  envs.py  factory.py  format.py  frozenlake.py  ns_gym.py  routing.py  synthetic.py  utils.py  wrappers.py
src/backends/: __init__.py  base.py  ns.py  plain.py
src/custom/: action_star.py  atari.py  frozenlake.py  ns_gym.py  synthetic.py
src/custom/tabular/: __init__.py  value_iteration.py
src/envs/: action_star.py  base.py  envs.py  frozenlake.py  ns_gym.py  synthetic.py
src/experts/: __init__.py  action_star.py
src/integrations/: atari.py  ns_gym.py
src/mouse_envs/: __init__.py  build.py  config.py  env_ids.py  format.py  utils.py  wrappers.py
src/mouse_envs/experts/: __init__.py  action_star.py
src/mouse_envs/integrations/: ns_gym.py
src/mouse_envs/worlds/: procedural_frozenlake.py  synthetic.py
src/planning/: __init__.py  value_iteration.py
src/stack/: __init__.py  obs.py  wrappers.py
src/tabular/: __init__.py
src/worlds/: procedural_frozenlake.py  synthetic.py
tests/: conftest.py  test_atari.py  test_ns_gym.py  test_q_star.py  test_smoke.py
