[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mouse-env"
version = "0.3.0"
description = "Meta-Optimization Using Sequential Experiences — environments"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
classifiers = [
 "Development Status :: 3 - Alpha",
 "Intended Audience :: Science/Research",
 "Topic :: Scientific/Engineering :: Artificial Intelligence",
 "Programming Language :: Python :: 3",
 "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mouse-core>=0.1.0",
    "gymnasium[box2d]>=1.2.3",
    "stable-baselines3>=2.0.0",
    "huggingface_hub>=1.5.0",
    "pillow>=12.1.1",
    "multiprocess>=0.70.18",
    "tensordict>=0.7.0",
]

[project.optional-dependencies]
atari = [
    "gymnasium[atari]>=1.2.3",
]
non-stationary = [
    "ns_gym>=1.0.10",
]
dev = [
    "pyright",
    "pytest",
    "build>=1.2",
    "twine>=6.1",
    "jupyter>=1.1.1",
    "ipykernel>=6.29.5",
    "nbstripout>=0.7.1",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]

[tool.setuptools]
packages = [
    "mouse_envs",
    "mouse_envs.worlds",
    "mouse_envs.experts",
]

[tool.setuptools.package-dir]
"mouse_envs" = "src/mouse_envs"
"mouse_envs.worlds" = "src/mouse_envs/worlds"
"mouse_envs.experts" = "src/mouse_envs/experts"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
mouse-core = { git = "https://github.com/micahr234/mouse-core.git" }
