[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mouse-env"
version = "0.4.1"
description = "Meta-Optimization Using Sequential Experiences — environments"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
classifiers = [
 "Development Status :: 3 - Alpha",
 "Intended Audience :: Science/Research",
 "Topic :: Scientific/Engineering :: Artificial Intelligence",
 "Programming Language :: Python :: 3",
]
dependencies = [
    "gymnasium>=1.3.0",
    "stable-baselines3>=2.9.0",
    "huggingface_hub>=1.20.1",
    "pillow>=12.2.0",
    "multiprocess>=0.70.19",
]

[project.optional-dependencies]
examples = [
    "swig>=4.4.1",
    "gymnasium[all]>=1.3.0",
    "opencv-python>=4.13.0.92",
    "matplotlib>=3.11.0",
    "pygame>=2.6.1",
    "jupyter>=1.1.1",
    "ipykernel>=7.3.0",
]
atari = [
    "gymnasium[atari]>=1.3.0",
]
non-stationary = [
    "ns-gym>=1.0.12",
]
all = [
    "mouse-env[examples,atari,non-stationary]",
]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "build>=1.5.0",
    "twine>=6.2.0",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]
no-build-isolation-package = ["box2d-py"]

[tool.setuptools]
packages = [
    "mouse_envs",
    "mouse_envs.worlds",
    "mouse_envs.experts",
]

[tool.setuptools.package-dir]
"mouse_envs" = "src/mouse_envs"
"mouse_envs.worlds" = "src/mouse_envs/worlds"
"mouse_envs.experts" = "src/mouse_envs/experts"

[tool.pytest.ini_options]
testpaths = ["tests"]
